--- a/_quarto.yml
+++ b/_quarto.yml
@@ -34,7 +34,7 @@ website:
     collapse-level: 2
     contents:
       - href: index.qmd
-        text: Welcome
+        text: Welcomeeeeeee
       - about.qmd
       - section: analysis/index.qmd
         contents:
